Fix transition for video queue jump

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,6 +1,7 @@
 .content {
   padding: 5rem 0rem;
   margin-left: 17vw;
+  width: 100%;
   &.contract {
     margin-left: 10rem;
   }
